assets/css/styles.css
/****** COLOR ******/
:root {
	--color-brand-1: #87c95e;
	--color-brand-2: #2d8642;
	--color-brand-3: #2b2c6c;
	--color-brand-4: #11b0c8;
	--color-brand-5: #6dcad6;
	--color-error: tomato;
}

/****** RESET ******/
*,
*:after,
*:before {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

/****** GENERAL ******/
html {
	font-size: 10px;
}

body {
	font-family: Ubuntu, sans-serif;
}

a {
	color: black;
	font-weight: 900;
}

a:hover {
	color: var(--color-brand-2);
}

section:not(:last-of-type) {
	margin: 4rem 0;
}

article {
	margin-left: 2rem;
}

hr {
	margin: 3rem 0;
	color: var(--color-brand-3);
}

/****** PAGE ******/
.page {
	position: relative;
	height: 100%;
}

.page__body {
	height: 100%;
	padding: 4rem 2rem;
	filter: none;
	transition: filter 4s ease-out;
}

.page__body.is-searching .page__item {
	filter: blur(1rem);
	pointer-events: none;
}

.page__header {
	text-align: center;
}

.page__title {
	color: var(--color-brand-3);
	font-weight: 900;
}

.page__container {
	width: 100%;
	max-width: 1280px;
	margin: 0 auto;
}

.page__main {
	padding-bottom: 18rem;
}

.page__footer {
	display: flex;
	position: fixed;
	bottom: 0;
	left: 0;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	width: 100%;
	padding: 3rem 2rem;
	background-color: white;
	color: var(--color-brand-4);
	font-size: 2rem;
	font-weight: 100;
}

.footer__link {
	color: var(--color-brand-4);
	font-size: 1.4rem;
	text-decoration: underline;
}

.page__footer .copyright__year-start:after {
	content: "-";
}

/****** BUTTON ******/
.button {
	display: inline-block;
	padding: 1rem 3rem;
	border: 0.2rem solid var(--color-brand-3);
	outline: none;
	background-color: white;
	color: var(--color-brand-3);
	font-size: 2rem;
	cursor: pointer;
}

.button:hover {
	border-color: var(--color-brand-3);
	background-color: var(--color-brand-3);
	color: white;
}

/****** LOADER ******/
.loader {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.spinner {
	position: relative;
	width: 40px;
	height: 40px;
	margin: 100px auto;
}

.double-bounce1,
.double-bounce2 {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	animation: sk-bounce 2s infinite ease-in-out;
	border-radius: 50%;
	opacity: 0.6;
	background-color: var(--color-brand-1);
}

.double-bounce2 {
	animation-delay: -1s;
}

@keyframes sk-bounce {
	0%,
	100% {
		transform: scale(0);
	}

	50% {
		transform: scale(4);
	}
}

/****** SEARCH ******/
.search {
	display: flex;
	justify-content: center;
}

.search__inner {
	position: relative;
	width: 100%;
	max-width: 50rem;
}

.search__icon {
	position: absolute;
	top: 50%;
	right: 2rem;
	transform: translate(0, -50%);
	color: var(--color-brand-3);
	font-size: 3rem;
	pointer-events: none;
}

.search__input {
	width: 100%;
	padding: 1.5rem;
	border: 0.2rem solid var(--color-brand-3);
	outline: none;
	color: var(--color-brand-3);
	font-size: 1.8rem;
	font-weight: 700;
}

.search__input:focus {
	background-color: var(--color-brand-5);
}

.search__input::placeholder {
	color: var(--color-brand-2);
	font-style: italic;
	font-weight: 500;
}

/****** FILTER ******/
.filter {
	display: flex;
	justify-content: center;
	margin: 4rem 0 2rem;
	font-size: 3rem;
	list-style: none;
}

.filter__item {
	width: fit-content;
	color: var(--color-brand-4);
	font-weight: 700;
	text-decoration: none;
	text-transform: lowercase;
	cursor: pointer;
}

.filter__item:not(:last-of-type) {
	margin-right: 3rem;
}

.filter__item.is-active,
.filter__item:hover {
	color: var(--color-brand-1);
}

@media (width <= 600px) {
	.filter {
		font-size: 5.5vw;
	}

	.filter__item:not(:last-of-type) {
		margin-right: 2rem;
	}
}

@media (width <= 300px) {
	.filter {
		flex-direction: column;
		align-items: center;
		text-align: center;
	}

	.filter__item:not(:last-of-type) {
		margin-right: 0;
		margin-bottom: 0.8rem;
	}
}

/****** LIST ******/
.list {
	margin: 5rem auto 0;
}

.list-info {
	padding: 3rem 1rem;
	color: var(--color-brand-3);
	font-size: 2rem;
	text-align: center;
}

.list-cards {
	display: flex;
	justify-content: center;
}

.list-cards__inner {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	width: 90%;
}

.card {
	position: relative;
	width: calc(25% - 2rem);
	height: fit-content;
	min-height: 15rem;
	margin: 1rem;
	padding: 2rem;
	border: 0.5rem solid transparent;
	border-radius: 1rem;
	background-color: rgb(0 0 0 / 80%);
	color: white;
	font-size: 1.8rem;
	font-weight: 300;
	cursor: pointer;
	overflow-wrap: break-word;
}

.card__button {
	display: flex;
	position: absolute;
	top: 0;
	right: 0;
	align-items: center;
	justify-content: center;
	width: 4rem;
	height: 4rem;
	margin: 1rem;
	border: 0.2rem solid white;
	border-radius: 50%;
	background-color: rgb(0 0 0 / 60%);
	font-size: 1.8rem;
}

.card__data {
	padding: 1rem 0;
}

.card__subtitle {
	margin-bottom: 0.5rem;
	font-size: 2rem;
	font-weight: 700;
}

.card__list {
	display: flex;
	flex-wrap: wrap;
	margin-left: 3rem;
}

.card__data[data-type="characters"],
.card__data[data-type="residents"],
.card__data[data-type="episode"],
.card__data[data-type="url"] {
	display: none;
}

.card__data[data-type="origin"] ul,
.card__data[data-type="location"] ul {
	margin-left: 0;
	list-style: none;
}

.card__data[data-type="origin"] ul li:nth-child(2),
.card__data[data-type="location"] ul li:nth-child(2) {
	display: none;
}

.card__data[data-type="image"] {
	margin-bottom: 1rem;
	padding: 0;
}

.card img {
	display: inline-block;
	width: 100%;
	border-radius: 1rem;
}

.card:hover {
	border-color: var(--color-brand-4);
	background-color: black;
}

.card:hover .card__button {
	background-color: var(--color-brand-4);
}

.card:not(.is-view) .card__data:not([data-type="name"], [data-type="image"]) {
	display: none;
}

.card.is-view .card__data:not(:last-of-type, [data-type="image"]) {
	border-bottom: 0.1rem solid rgb(255 255 255 / 50%);
}

.card.is-view .card__data:only-child {
	border-bottom: 0;
}

@media (width <= 1280px) {
	.card {
		width: calc(33.333% - 2rem);
	}
}

@media (width <= 900px) {
	.card {
		width: calc(50% - 2rem);
	}
}

@media (width <= 600px) {
	.card {
		width: calc(100% - 2rem);
	}
}

/****** PAGINATION ******/
.pagination {
	display: flex;
	position: fixed;
	bottom: 8.3rem;
	left: 0;
	align-items: center;
	justify-content: center;
	width: 100%;
	padding: 0.5rem;
	background-color: rgb(255 255 255 / 50%);
}

.pagination__button {
	display: flex;
	align-items: center;
	justify-content: center;
	width: 6rem;
	height: 6rem;
	margin: 1rem 2rem;
	border: 0.5rem solid white;
	border-radius: 50%;
	background-color: var(--color-brand-4);
	color: white;
	font-size: 3rem;
	cursor: pointer;
}

.pagination__button[data-url=""] {
	background-color: #cccccc;
}

.pagination__counter {
	padding: 0.8rem 3rem;
	border-radius: 1rem;
	background-color: white;
	color: var(--color-brand-4);
	font-size: 3rem;
	font-weight: 300;
}

/****** MESSAGE ******/
.message {
	position: relative;
}

.message__button-close {
	position: absolute;
	top: 0;
	right: 0;
	width: 4rem;
	height: 4rem;
	transform: translate(50%, -50%);
	border: 0.3rem solid #ffffff;
	border-radius: 50%;
	outline: none;
	background-color: #ffffff;
	box-shadow: 0 0 5rem rgb(0 0 0 / 20%);
	cursor: pointer;
}

.message__button-close:before,
.message__button-close:after {
	content: "";
	display: inline-block;
	position: absolute;
	top: 50%;
	left: 50%;
	width: 70%;
	height: 0.3rem;
	transition: transform 0.5s ease-out 0s;
	background-color: var(--color-error);
}

.message__button-close:before {
	transform: translate(-50%, -50%) rotate(45deg);
}

.message__button-close:after {
	transform: translate(-50%, -50%) rotate(-45deg);
}

.message__button-close:hover {
	background-color: var(--color-error);
}

.message__button-close:hover:before,
.message__button-close:hover:after {
	background-color: #ffffff;
}

.message__button-close:hover:after {
	transform: translate(-50%, -50%) rotate(0);
}

.message__button-close:hover:before {
	transform: translate(-50%, -50%) rotate(0);
}

/*** MESSAGE - ERROR404 ***/
.message-error404 {
	margin: 10vh auto;
	color: var(--color-brand-3);
	font-size: 3rem;
	font-weight: 900;
	text-align: center;
}

@media (width <= 500px) {
	.message-error404 {
		margin: 4vh auto 0;
	}
}

.message-error404 .message__inner:after,
.message-error404 .message__inner:before {
	content: "";
	display: inline-block;
	width: 30rem;
	height: 30rem;
	background-repeat: no-repeat;
	background-position: center;
	background-size: contain;
}

.message-error404 .message__inner:before {
	position: fixed;
	bottom: 10vh;
	left: 5%;
	background-image: url("../images/mr-meeseeks-1.png");
}

@media (width <= 850px) {
	.message-error404 .message__inner:before {
		display: none;
	}
}

.message-error404 .message__inner:after {
	position: fixed;
	z-index: 999999;
	right: 5%;
	bottom: 0;
	background-image: url("../images/mr-meeseeks-2.png");
}

@media (width <= 600px) {
	.message-error404 .message__inner:after {
		display: none;
	}
}

/*** MESSAGE - ALERT ***/
.message-alert {
	position: fixed;
	z-index: 999;
	right: 5rem;
	bottom: 8rem;
	padding: 2rem;
	border: 0.3rem solid #ffffff;
	border-radius: 1rem;
	background-color: var(--color-error);
	box-shadow: 0 0 5rem rgb(0 0 0 / 20%);
	color: #ffffff;
	font-size: 1.5rem;
}

.message-alert .message__inner p {
	display: flex;
	align-items: center;
	justify-content: center;
}

.message-alert__icon {
	margin-right: 1rem;
	font-size: 3rem;
}

@media (width <= 500px) {
	.message-alert {
		right: initial;
		left: 50%;
		width: 80%;
		transform: translate(-50%, 0);
		text-align: center;
	}
}

/****** IDS ******/
#rickAndMorty {
	width: 90%;
	height: 20vh;
	filter: drop-shadow(0 0 1rem var(--color-brand-1));
}

#portal {
	display: flex;
	height: 40vh;
	margin: 0 auto;
}

#appButton {
	margin: 3rem auto 1rem;
}

#linkApi {
	display: inline-block;
	width: 100%;
	font-size: 1.8rem;
	font-style: italic;
	font-weight: 300;
	text-align: center;
}

